--- a/README.org
+++ b/README.org
@@ -29,7 +29,7 @@
    source /cvmfs/snowmass21.opensciencegrid.org/ee_gg/setup.sh
    #+end_export
   
-* Example: ee2Hqq_380GeV_posPol_SM.sin
+* Example: ee2Hnunu_1.5TeV_negPol_UFO.sin
 
   - Sindarin file and UFO model taken from CLIC example repository (private), reference: Ulrike Schnorr.
 
